syntax = "proto3";

package received_item;

import "google/protobuf/empty.proto";
import "protos/logistics/inventory/inventory.proto";

service ReceivedItemController {
    rpc List(ReceivedItemListRequest) returns (ReceivedItemListResponse) {}
    rpc Create(ReceivedItem) returns (ReceivedItem) {}
    rpc Retrieve(ReceivedItemRetrieveRequest) returns (ReceivedItem) {}
    rpc Update(ReceivedItem) returns (ReceivedItem) {}
    rpc Destroy(ReceivedItem) returns (google.protobuf.Empty) {}

    rpc Make(MakeReceivedItemRequest) returns (stream ReceivedItem) {}
    rpc Receive(ReceivedItemRetrieveRequest) returns (ReceivedItem) {}
}

enum ReceivedItemStatus {
    ON_RECEIVING = 0;
    RECEIVED = 1;
    OUT_OF_STOCK = 2;
    CANCELED = 3;
}

message ReceivedItem {
    int64 id = 1;
    int64 order_id = 2;
    int64 order_item_id = 3;
    string code = 4;
    ReceivedItemStatus status = 5;
    string product_id = 6;
    string product_name = 7;
    string product_img = 8;
    string brand_korname = 9;
    string brand_keyname = 10;
    string size = 11;
    optional string color = 12;
    string created_at = 13;
    string updated_at = 14;
    optional string deleted_at = 15;
    optional inventory.Inventory inventory = 16;
}

message ReceivedItemListRequest {
    int64 page = 1;
    int64 size = 2;
    optional string search = 3;
    repeated string statuses = 4;
}

message ReceivedItemListResponse {
    int64 count = 1;
    optional int64 next = 2;
    optional int64 previous = 3;
    repeated ReceivedItem results = 4;
}

message ReceivedItemRetrieveRequest {
    int64 id = 1;
}

message MakeReceivedItemRequest {
    int64 order_id = 1;
    int64 order_item_id = 2;
    string order_item_code = 3;
    string brand_korname = 4;
    string brand_keyname = 5;
    string product_id = 6;
    string product_img = 7;
    string product_name = 8;
    string size = 9;
    optional string color = 10;
    int64 item_quantity = 11;
    int64 request_quantity = 12;
    bool force = 13;
}
